changes in backend securityconfig